347 fixed, added test